--- a/ThisIsCpp_ch1.vcxproj
+++ b/ThisIsCpp_ch1.vcxproj
@@ -133,7 +133,10 @@
     <ClCompile Include="002_NewDeleteSample.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="003_NewDeleteArray.cpp" />
+    <ClCompile Include="003_NewDeleteArray.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="004_ReferenceType.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
