--- a/ThisIsCpp_ch1.vcxproj.filters
+++ b/ThisIsCpp_ch1.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="004_ReferenceType.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="005_CallByReference.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
