--- a/ThisIsCpp_ch1.vcxproj
+++ b/ThisIsCpp_ch1.vcxproj
@@ -139,7 +139,10 @@
     <ClCompile Include="004_ReferenceType.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="005_CallByReference.cpp" />
+    <ClCompile Include="005_CallByReference.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="006_ReferenceSwap.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
