--- a/ThisIsCpp_ch1.vcxproj.filters
+++ b/ThisIsCpp_ch1.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="005_CallByReference.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="006_ReferenceSwap.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
