--- a/ThisIsCpp_ch1.vcxproj
+++ b/ThisIsCpp_ch1.vcxproj
@@ -142,7 +142,10 @@
     <ClCompile Include="005_CallByReference.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="006_ReferenceSwap.cpp" />
+    <ClCompile Include="006_ReferenceSwap.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="007_RvalueSample.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
