--- a/ThisIsCpp_ch1.vcxproj.filters
+++ b/ThisIsCpp_ch1.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="006_ReferenceSwap.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="007_RvalueSample.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
