--- a/ThisIsCpp_ch1.vcxproj.filters
+++ b/ThisIsCpp_ch1.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="007_RvalueSample.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="008_RangeBasedfor.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
