--- a/ThisIsCpp_ch1.vcxproj.filters
+++ b/ThisIsCpp_ch1.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="008_RangeBasedfor.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="009_Exercise_01.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
