240919 17:48 파일 이름 수정 및 완료

--- a/ThisIsCpp_ch1.vcxproj
+++ b/ThisIsCpp_ch1.vcxproj
@@ -151,7 +151,10 @@
     <ClCompile Include="008_RangeBasedfor.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="009_Exercise_01.cpp" />
+    <ClCompile Include="Exercise_01.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Exercise_02.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
