--- a/ThisIsCpp_ch1.vcxproj.filters
+++ b/ThisIsCpp_ch1.vcxproj.filters
@@ -45,5 +45,8 @@
     <ClCompile Include="Exercise_02.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Exercise_03.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
