--- a/ThisIsCpp_ch1.vcxproj.filters
+++ b/ThisIsCpp_ch1.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="Exercise_03.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Exercise_04.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
